@@ -16,6 +16,7 @@ Revision history for Rex
  - Fix typos
  - Document limitations of nesting shared variables
  - Add initial documentation for Rex::Hook
+ - Clarify hooks documentation
 
  [ENHANCEMENTS]
  - Check availability of sysctl command
